Fix Sticky post alignment on browsers < 500px

--- a/rtl.css
+++ b/rtl.css
@@ -2257,6 +2257,7 @@ table th {
 		padding-right: 20px;
 		padding-left: 20px;
 		padding-top: 10px;
+		margin-right: -10px;
 	}
 
 	.multi-author-mode .site,
