--- a/style.css
+++ b/style.css
@@ -2422,6 +2422,7 @@ table th {
 		padding-right: 20px;
 		padding-left: 20px;
 		padding-top: 10px;
+		margin-left: -10px;
 	}
 
 	.multi-author-mode .site,
